--- a/src/app.css
+++ b/src/app.css
@@ -1,13 +1,16 @@
 html {
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
 }
 
 body {
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 0;
+  line-height: 1.5rem;
+  font-size: larger;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -72,5 +75,80 @@ body {
 
 #about-me {
   height: 450px;
-  background-color: grey;
+  background: linear-gradient(
+    162deg,
+    rgb(60, 60, 75) -10%,
+    rgb(25, 25, 25) 25%,
+    rgb(70, 70, 85) 100%
+  );
+  color: rgb(244, 240, 240);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  /* text-align: center; */
+  padding: 0 50px;
+  /* line-height: 1.3rem;
+  font-size: larger; */
+}
+
+#about-me h2 {
+  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(140, 140, 140);
+}
+
+/*** Projects */
+
+#projects {
+  height: 950px;
+  background-color: white;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#projects h2 {
+  margin: 0;
+  padding-top: 100px;
+  color: black;
+  text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgb(153, 153, 153);
+}
+
+#project-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  gap: 25vw;
+}
+
+.project {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  border: 2px solid black;
+  width: 300px;
+  font-size: medium;
+  box-shadow: 2px 2px 3px grey, 2px -2px 3px grey, -2px -2px 3px grey,
+    -2px 2px 3px grey;
+}
+
+.project h3 {
+  font-size: larger;
+  margin: 0;
+  padding-bottom: 20px;
+}
+
+.project-image {
+  align-self: center;
+}
+
+.link-button {
+  text-decoration: none;
+  border: 1px solid black;
+  width: 50%;
+  align-self: center;
+  background-color: black;
+  color: white;
+  font-weight: 700;
+  box-shadow: 2px 2px 3px grey;
 }
