--- a/src/app.css
+++ b/src/app.css
@@ -1,16 +1,17 @@
 html {
-  height: 100%;
   width: 100%;
   box-sizing: border-box;
 }
 
 body {
-  height: 100%;
   width: 100%;
   margin: 0;
   line-height: 1.5rem;
   font-size: larger;
   text-align: center;
+  overflow-x: hidden;
+  display: flex;
+  flex-flow: column nowrap;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -86,10 +87,7 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  /* text-align: center; */
   padding: 0 50px;
-  /* line-height: 1.3rem;
-  font-size: larger; */
 }
 
 #about-me h2 {
@@ -119,6 +117,8 @@ body {
   flex-flow: row nowrap;
   justify-content: center;
   gap: 25vw;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .project {
@@ -151,4 +151,64 @@ body {
   color: white;
   font-weight: 700;
   box-shadow: 2px 2px 3px grey;
+}
+
+/*** Contact */
+
+#contact {
+  overflow-y: hidden;
+  height: 450px;
+  background: linear-gradient(
+    162deg,
+    rgb(60, 60, 75) -10%,
+    rgb(25, 25, 25) 25%,
+    rgb(70, 70, 85) 100%
+  );
+  color: rgb(244, 240, 240);
+  padding: min(10px, 10%) 50px 0 50px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#contact h2 {
+  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(140, 140, 140);
+}
+
+#contact-buttons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.button-group {
+  overflow-y: hidden;
+  display: flex;
+  flex-flow: row wrap;
+  flex-grow: 1;
+  justify-content: space-around;
+  padding: 20px 0;
+}
+
+.button button {
+  background: none;
+  border: none;
+}
+
+.button button:hover {
+  cursor: pointer;
+}
+
+#email {
+  font-size: medium;
+}
+/*** footer */
+
+#footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgb(153, 153, 153);
 }
