Added navigation functionality

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   width: 100%;
-  box-sizing: border-box;
 }
 
 body {
@@ -19,15 +22,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+button,
+a {
+  border: 2px ridge grey;
+}
+
 /*** NAV */
 
 #nav-bar {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 20px;
-  height: 100px;
+  min-height: min-content;
 }
 
 #name-header {
@@ -49,18 +57,52 @@ body {
   gap: 12px;
 }
 
-.nav-links button {
-  height: 45px;
+.nav-links button,
+a {
   padding: 10px 10px;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  height: 45px;
   background-color: white;
-  border: 3px ridge grey;
   white-space: nowrap;
+  cursor: pointer;
+  transition: border 125ms, transform 125ms, text-shadow 125ms;
+}
+
+.highlight {
+  border-radius: 3px;
+  text-shadow: 1px 1px 2px rgb(177, 177, 177);
+  transition: border 250ms, transform 250ms, text-shadow 250ms, box-shadow 250ms;
+  transform: translateX(-3px) translateY(-2px);
+  border: 0.5px ridge black;
+  border-bottom: 3px ridge rgb(53, 53, 53);
+  border-right: 3px ridge rgb(95, 95, 95);
+  box-shadow: 0px -1px 2px rgb(225, 225, 225), -1px 0px 1px rgb(162, 162, 162),
+    -1px -1px 1px rgb(185, 185, 185);
+}
+
+.select-button {
+  border-radius: 3px;
+  background: linear-gradient(
+    36deg,
+    rgba(0, 255, 204, 0.3) 29%,
+    rgba(39, 255, 0, 0.2) 62%,
+    rgba(255, 251, 0, 0.2) 95%
+  );
+  text-shadow: 1px 1px 2px rgb(177, 177, 177);
+  transform: translateX(3px) translateY(2px);
+  border: 1px solid black;
+  border-top: 4px solid rgb(53, 53, 53);
+  border-left: 4px solid rgb(95, 95, 95);
 }
 
 /*** Title  */
 
 #title {
-  height: calc(100vh - 100px);
+  height: max(calc(100vh - 100px), 420px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -229,16 +271,6 @@ body {
   flex-grow: 1;
   justify-content: space-around;
   padding: 20px 0;
-}
-
-.button button {
-  background: none;
-  border: none;
-  width: 200px;
-}
-
-.button button:hover {
-  cursor: pointer;
 }
 
 #email {
