Fixed specificity issue with navbar links, and other anchor tags. Changed color of contact buttons

--- a/src/app.css
+++ b/src/app.css
@@ -22,11 +22,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-button,
-a {
-  border: 2px ridge grey;
-}
-
 /*** NAV */
 
 #nav-bar {
@@ -57,8 +52,8 @@ a {
   gap: 12px;
 }
 
-.nav-links button,
-a {
+.nav-button {
+  border: 2px ridge grey;
   padding: 10px 10px;
   font-size: small;
   display: flex;
@@ -75,7 +70,6 @@ a {
 .highlight {
   border-radius: 3px;
   text-shadow: 1px 1px 2px rgb(177, 177, 177);
-  transition: border 250ms, transform 250ms, text-shadow 250ms, box-shadow 250ms;
   transform: translateX(-3px) translateY(-2px);
   border: 0.5px ridge black;
   border-bottom: 3px ridge rgb(53, 53, 53);
@@ -176,7 +170,6 @@ a {
 .project-spacer {
   max-height: 100%;
   width: 100%;
-  box-sizing: border-box;
   padding: 0 0px / 2;
   display: flex;
   justify-content: center;
@@ -190,6 +183,8 @@ a {
 }
 
 .project {
+  display: flex;
+  flex-flow: column nowrap;
   padding: 15px;
   border: 2px solid rgb(0, 0, 0);
   font-size: medium;
@@ -271,6 +266,16 @@ a {
   flex-grow: 1;
   justify-content: space-around;
   padding: 20px 0;
+}
+
+.button button {
+  background: none;
+  border: none;
+  width: 200px;
+}
+
+.button button:hover {
+  cursor: pointer;
 }
 
 #email {
