--- a/src/app.css
+++ b/src/app.css
@@ -111,7 +111,7 @@ body {
 /*** About Me  */
 
 #about-me {
-  height: 450px;
+  min-height: 450px;
   background: linear-gradient(
     162deg,
     rgb(60, 60, 75) -10%,
@@ -123,7 +123,8 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  padding: 0 50px;
+  padding: 10px 3em;
+  text-indent: 1.5em;
 }
 
 #about-me h2 {
