--- a/src/app.css
+++ b/src/app.css
@@ -54,6 +54,7 @@ body {
 
 .nav-button {
   border: 2px ridge grey;
+  border-radius: 3px;
   padding: 10px 10px;
   font-size: small;
   display: flex;
@@ -152,6 +153,7 @@ body {
 
 .carousel {
   perspective: 500px;
+  /* -webkit-perspective: 500px; */
   display: flex;
   flex-flow: row;
   align-items: center;
@@ -163,10 +165,24 @@ body {
   min-height: fit-content;
   margin: 15% 0;
   transform-style: preserve-3d;
+  /* -webkit-transform-style: preserve-3d; */
+  /* -webkit-transition: transform 0.5s; */
+  /* -webkit-backface-visibility: hidden; */
   transition: transform 0.5s;
   flex: 0 1 auto;
   z-index: 1;
 }
+
+/* @supports (-webkit-transition: transform 0.5s) {
+  .carousel {
+    -webkit-perspective: 500px;
+  }
+  .carousel figure {
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: transform 0.5s;
+    -webkit-backface-visibility: hidden;
+  }
+} */
 
 .project-spacer {
   max-height: 100%;
@@ -206,15 +222,20 @@ body {
 }
 
 .select {
-  flex: 0 0 auto;
-  cursor: pointer;
-  color: #333;
-  background: none;
-  border: 1px solid;
-  letter-spacing: 1px;
-  padding: 10px;
-  z-index: 2;
+  border: 2px ridge grey;
+  border-radius: 3px;
+  padding: 10px 10px;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  min-height: 45px;
   background-color: white;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: border 125ms, transform 125ms, text-shadow 125ms;
+  /* z-index: 123; */
 }
 
 .project h3 {
