--- a/src/app.css
+++ b/src/app.css
@@ -158,10 +158,10 @@ body {
 }
 
 .project-container {
-  max-width: 100%;
+  max-width: 97%;
   height: min(30vw, 360px);
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
   gap: 2em;
@@ -169,7 +169,6 @@ body {
 }
 
 .project-background {
-  /* background-color: rgb(0, 0, 0); */
   border: 3px solid rgb(0, 0, 0);
   border-radius: 18px;
   display: flex;
