Fixed project linking

--- a/src/app.css
+++ b/src/app.css
@@ -304,14 +304,18 @@ body {
   overflow: visible;
 }
 
-.button-spacer {
+/* .large-project-display .project a{
+  background-color: aqua;
+} */
+
+.close-project-spacer {
   width: calc(min(50%, 750px) + 4em);
   display: flex;
   flex-direction: row;
   justify-content: end;
   align-items: center;
 }
-.button-spacer > button {
+.close-project-spacer > button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -330,7 +334,7 @@ body {
   transition: transform 0.3s, width 0.3s, height 0.3s, border 0.3s;
 }
 
-.button-spacer > button:hover {
+.close-project-spacer > button:hover {
   border: 3px solid rgb(255, 255, 255);
   transform: translateY(-2px) translateX(-2px);
   width: 1.3em;
