--- a/src/app.css
+++ b/src/app.css
@@ -109,14 +109,17 @@ body {
 #title-image {
   position: relative;
   top: -25px;
-  width: min(66%, 475px);
+  width: min(66%, 450px);
+  border-radius: min(66%, 450px);
+  /* box-shadow: 0px 0px 45px 0px rgba(0, 255, 204, 0.4),
+    0px 0px 55px 20px rgba(255, 251, 0, 0.3); */
 }
 
 /*** About Me  */
 
 #about-me {
   min-height: 450px;
-
+  position: relative;
   background: linear-gradient(
     162deg,
     rgb(60, 60, 75) -10%,
@@ -134,7 +137,18 @@ body {
 }
 
 #about-me h2 {
-  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(140, 140, 140);
+  font-size: 2em;
+  line-height: 2em;
+  margin: 0;
+  background: linear-gradient(
+    36deg,
+    rgba(255, 251, 0, 1) -100%,
+    rgba(0, 255, 204, 0.8) 60%,
+    rgba(255, 251, 0, 1) 85% /* rgba(39, 255, 0, 0.7) 150% */
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /*** Projects */
@@ -146,14 +160,22 @@ body {
   align-items: center;
   padding: 70px 0 50px 0;
   width: 100%;
+  box-shadow: inset 3px 3px 12px 1px rgba(255, 251, 0, 0.4),
+    inset -1px 0 10px 0px rgba(39, 255, 0, 0.1),
+    inset 0 -2px 10px 3px rgba(0, 255, 204, 0.3),
+    0 -15px 15px 10px rgba(255, 251, 0, 0.4),
+    0 -10px 10px 2px rgba(39, 255, 0, 0.4),
+    0px 10px 10px 3px rgba(0, 255, 204, 0.2),
+    0px 10px 10px 3px rgba(39, 255, 0, 0.1);
 }
 
 #projects h2 {
+  font-size: 2em;
+  line-height: 2em;
   margin: 0;
   padding-bottom: 1.5em;
   justify-self: flex-start;
   color: black;
-  text-shadow: 1px 1px 2px rgb(255, 255, 255), 0 0 1em rgb(153, 153, 153);
 }
 
 .project-container {
@@ -354,10 +376,21 @@ body {
   flex-flow: column nowrap;
   justify-content: space-around;
   align-items: center;
+  border-radius: 20px;
 }
 
 #contact h2 {
-  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(140, 140, 140);
+  font-size: 2em;
+  line-height: 2em;
+  margin: 0;
+  background: linear-gradient(
+    136deg,
+    rgba(255, 251, 0, 0.8) 15%,
+    rgba(0, 255, 204, 0.8) 87%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 #contact-links {
