--- a/src/app.css
+++ b/src/app.css
@@ -111,8 +111,8 @@ body {
   top: -25px;
   width: min(66%, 450px);
   border-radius: min(66%, 450px);
-  /* box-shadow: 0px 0px 45px 0px rgba(0, 255, 204, 0.4),
-    0px 0px 55px 20px rgba(255, 251, 0, 0.3); */
+  box-shadow: -20px -20px 20px 0px rgba(0, 255, 204, 0.3),
+    20px 20px 20px 0px rgba(29, 250, 0, 0.3);
 }
 
 /*** About Me  */
