Changed contact body css

--- a/src/app.css
+++ b/src/app.css
@@ -394,7 +394,7 @@ body {
     rgb(70, 70, 85) 100%
   );
   color: rgb(244, 240, 240);
-  padding: 50px;
+  padding: min(50px, 10vw);
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-around;
