--- a/src/app.css
+++ b/src/app.css
@@ -448,12 +448,25 @@ body {
   width: 90px;
   height: 120px;
   position: absolute;
-  top: -240px;
+  /* top: -240px; */
+  /* border-bottom-right-radius: 50px; */
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
   overflow: hidden;
+}
+
+.raccoon-li {
+  top: -240px;
+}
+
+.raccoon-gh {
+  top: -240px;
+  height: 160px;
+  transform-origin: 50% 200px;
+  rotate: 115deg;
+  z-index: -1;
 }
 
 .raccoon {
@@ -476,16 +489,6 @@ body {
   cursor: pointer;
   position: relative;
   z-index: 0;
-}
-
-.contact-link button::before {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  content: "";
-  z-index: -1;
 }
 
 #email {
